syntax = "proto3";
package io.clbs.octopusmq.grpc.management;
option go_package = "github.com/clbs-io/octopusmq/pkg/grpcmgmtpb";

import "google/protobuf/empty.proto";
import "messages.proto";

// The service represents management on the queues.
service ManagementService {
  // CreateQueue creates a new queue. The named queue starts immediately.
  // If the queue already exists, the operation fails.
  rpc CreateQueue(io.clbs.octopusmq.protobuf.CreateQueueRequest) returns (google.protobuf.Empty);
  // ResizeQueue resizes the queue. If the queue does not exist, the operation fails. To shrink the queue, it has to be empty enought.
  rpc ResizeQueue(io.clbs.octopusmq.protobuf.ResizeQueueRequest) returns (google.protobuf.Empty);
  // DeleteQueue deletes the queue. If the queue does not exist, the operation fails.
  rpc DeleteQueue(io.clbs.octopusmq.protobuf.DeleteQueueRequest) returns (google.protobuf.Empty);
  // ListQueues lists all queues defined on the server side.
  rpc ListQueues(google.protobuf.Empty) returns (io.clbs.octopusmq.protobuf.ListQueuesResponse);
  // PauseQueue pauses the queue. If the queue does not exist, the operation fails. If the queue is already paused, the operation does nothing.
  rpc PauseQueue(io.clbs.octopusmq.protobuf.PauseQueueRequest) returns (google.protobuf.Empty);
  // ResumeQueue resumes the queue. If the queue does not exist, the operation fails. If the queue is already running, the operation does nothing.
  rpc ResumeQueue(io.clbs.octopusmq.protobuf.ResumeQueueRequest) returns (google.protobuf.Empty);
}
